# TRPG-demo

./: CMakeLists.txt
hdr/: battle.hxx  being.hxx  character.hxx  equipment.hxx  pch.hxx  simulation.hxx  skill.hxx  stat.hxx  status.hxx  util.hxx
src/: battle.cxx  being.cxx  character.cxx  equipment.cxx  main.cxx  simulation.cxx  skill.cxx  status.cxx  util.cxx
src/data/: creatures.csv
src/data/being/: Fenris  character.csv  creature.csv  creatures.csv  machine.csv
src/data/equipment/: artifact.csv  weapon.csv
src/data/status/: template.txt
